--- a/html/html5/block_tag.html
+++ b/html/html5/block_tag.html
@@ -7,19 +7,44 @@
     <title>Block Tag</title>
 </head>
 <body>
-    
+
+
     회원가입
 
     <form>
-        <input type="text">123
+        <input type="text"> 123
     </form>
 
 
+    <ul>
+        <li>test1</li>
+        <li>test2</li>
+    </ul>
+
+    <span>123</span>
+
+    <table>
+        <tr>
+            <td>111</td>  
+        </tr>
+    </table>
+
+    <span>123</span>
+
+    <p>문단을 표한하는 태그</p>
+
+    <HR>
+
+    <H1>HEADER</H1>
+
+    <hr>
+
     div-1
     div-2
-    <div>div-3</div>      
+    <div>div-3</div>
     div-4
     div-5
+
 
 </body>
 </html>
