--- a/html/html5/form_tag2.html
+++ b/html/html5/form_tag2.html
@@ -30,7 +30,7 @@
                class="input"   
                > <!-- class속성은 css로 스타일을 부여하기위한 식별자 -->
 
-        <input type="password" name="pw" id="pw" class="input" required>
+        <input type="password" name="pw" id="pw" class="input" required> <!-- required는 필수입력 -->
         <br>
         <input type="checkbox"> <!-- 멀티스레드, 선택을 할수도 안할수도 있음 (ex.개인정보 활용동의) -->
         <br>
